# zh-complete

./: Cargo.toml  LICENSE  README.md  diagnose.zsh  install.sh
shell/: pcd.zsh  zh-complete.zsh
src/: lib.rs  main.rs
tests/: cli.rs
