[package]
name = "zh-complete"
version = "0.1.0"
edition = "2021"
description = "Pinyin-based shell path completion helpers for Chinese filenames"
license = "MIT"
repository = "https://github.com/juruo123/zh-complete"

[[bin]]
name = "pinyin-path"
path = "src/main.rs"

[[bin]]
name = "zhc"
path = "src/bin/zhc.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pinyin = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3.10"
